# Arbie

./: .gitattributes  .gitignore  Arbie.sln  CMakeLists.txt  main.cpp
Arbie/: Arbie.vcxproj  Arbie.vcxproj.filters
Body/: CMakeLists.txt  Definitions.h  main.cpp
Body/Axes/: Axis.cpp  Axis.h
Body/Libraries/PCA9685/: PCA9685.cpp  PCA9685.h
Body/Motors/Base/: Base.cpp  Base.h  Base_Motor.cpp  Base_Motor.h
Body/Motors/Servo/: Servo.cpp  Servo.h  Servo_Motor.cpp  Servo_Motor.h
Body/Motors/Utilities/: Enumerations.h  Error_Messaging.h
Body/Movement/Motors/Base/: BaseMotor.cpp  BaseMotor.h
Body/Movement/Motors/Stepper/: StepperMotor.cpp  StepperMotor.h
Body/NervousSystem/: NervousSystem.cpp  NervousSystem.h
Body/Parts/Arm/: Arm.cpp  Arm.h
Body/Parts/Base/: Base_Body_Part.cpp  Base_Body_Part.h
Body/Parts/Bones/: Bone.cpp  Bone.h
Body/Parts/Elbow/: Elbow.cpp  Elbow.h
Body/Parts/Joint/: Joint.cpp  Joint.h
Body/Parts/Joints/Arm_Joint/: Arm_Joint.cpp  Arm_Joint.h
Body/Parts/Joints/Base/: BaseJoint.cpp  BaseJoint.h
Body/Parts/Joints/Base_Joint/: Base_Joint.cpp  Base_Joint.h
Body/Parts/Knee/: Knee.cpp  Knee.h
Body/Parts/Leg/: Leg.cpp  Leg.h
Body/Parts/Shoulder/: Shoulder.cpp  Shoulder.h
Body/Parts/Wrist/: Wrist.cpp  Wrist.h
Body/Whole_Body/: Whole_Body.cpp  Whole_Body.h
Brain/: CMakeLists.txt  main.cpp
Brain/Activity/: Activity.cpp  Activity.h
Brain/CoreTech/: CoreTech.cpp  CoreTech.h
Brain/CoreTechs/: CoreTechs.cpp  CoreTechs.h
Brain/Functionality/: Functionality.cpp  Functionality.h
Brain/Movement/: Movement.cpp  Movement.h
Brain/NervousSystem/: NervousSystem.cpp  NervousSystem.h
Brain/NervousSystem/MessageObjects/MessageObject/: BaseMessageObject.cpp  BaseMessageObject.h
Brain/NervousSystem/MessageObjects/Movement/: MovementMessageObject.cpp  MovementMessageObject.h
Brain/Processes/Base/: Base_Process.cpp  Base_Process.h
Brain/Processes/Movement/: Movement.cpp  Movement.h
Brain/Senses/Console_Input/: Console_Input.cpp  Console_Input.h
Common/: ErrorCodes.h  MotorIDs.h
OS_Utilities/: Logger.cpp  Logger.h
Senses/Base/: BaseSense.cpp  BaseSense.h
Senses/Base/Output/Smoothing/: KalmanSmoothing.cpp  KalmanSmoothing.h
Senses/Base/Processing/Tensorflow/Pipeline/: BoundingBox.cpp  BoundingBox.h  FaceDetectionModel.cpp  FaceDetectionModel.h  FacialLandmarkDetectionModel.h  HandLandmarkDetectionModel.cpp  HandLandmarkDetectionModel.h  Model.cpp  Model.h  ModelDetails.cpp  ModelDetails.h  ObjectDetectionModel.cpp  ObjectDetectionModel.h  Pipe.cpp  Pipe.h  PoseDetectionModel.cpp  PoseDetectionModel.h
Senses/Base/Sense/: BaseSense.cpp  BaseSense.h
Senses/Sight/: CMakeLists.txt  SenseOfSight.cpp  SenseOfSight.h  body_language.pkl  main.cpp  main.py  removable  tflite.cmake
Senses/Sight/Learn/: body_language.pkl
Senses/Sight/Processing/Tensorflow/Pipeline/Models/: VisualModel.cpp  VisualModel.h
Senses/Sight/Processing/Tensorflow/Pipeline/Models/FaceDetection/: FaceDetectionModel.cpp  FaceDetectionModel.h
Senses/Sight/Processing/Tensorflow/Pipeline/Models/FacialLandmarkDetection/: FacialLandmarkDetectionModel.cpp  FacialLandmarkDetectionModel.h
Senses/Sight/Processing/Tensorflow/Pipeline/Models/HandLandmarkDetection/: HandLandmarkDetectionModel.cpp  HandLandmarkDetectionModel.h
Senses/Sight/Processing/Tensorflow/Pipeline/Models/ObjectDetection/: ObjectDetectionModel.cpp  ObjectDetectionModel.h
Senses/Sight/Processing/Tensorflow/Pipeline/Models/PoseDetection/: PoseDetectionModel.cpp  PoseDetectionModel.h
Shared/: BodyPartProfiles.h  ErrorCodes.h  MotorAxis.h  MovementProfiles.h
Utilities/: Enumerations.h  Error_Messaging.h  Logger.h
Utilities/Logger/: Logger.cpp  Logger.h
Utilities/Pinouts/Arm_Pinout/: Arm_Pinout.cpp  Arm_Pinout.h
